--- a/TrabalhoFinal.ipynb
+++ b/TrabalhoFinal.ipynb
@@ -22,7 +22,9 @@
    "id": "b2f49ec1-58a9-4097-a059-7b5d03751113",
    "metadata": {},
    "source": [
-    "Este notebook mostra o desenvolvimento do trabalho final da disciplina de Inteligência Artificial."
+    "Este notebook mostra o desenvolvimento do trabalho final da disciplina de Inteligência Artificial.\n",
+    "\n",
+    "Clique <a href=\"https://github.com/gloriaxgz/trabalho_final_IA\" target=\"_blank\">aqui</a> para acessar o repositório no Github. "
    ]
   },
   {
